--- a/1003冒泡排序.md
+++ b/1003冒泡排序.md
@@ -24,6 +24,9 @@
 
 ## Code
 
+思路: 给出的sample output是第一趟冒泡后的结果--最大值放到了最后面, 所以需要从前往后遍历, 如果a[i]>a[i+1], 则交换二者位置.
+
+复杂度: 时间复杂度O(n)
 
 
 ```C++
@@ -31,7 +34,7 @@
 #include <iostream>
 using namespace std;
 
-
+// 完整的冒泡排序
 void bubble_sort(int a[], int n)
 {
     for (int j = 0; j < n - 1; j++)
@@ -42,6 +45,7 @@ void bubble_sort(int a[], int n)
         }
 }
 
+// 只扫描一趟的冒泡排序, 最大值放到最后面
 void bubble_sort_1003(int a[], int n)
 {
     for (int j = 0; j < n - 1; j++)
