--- a/1020矩阵连乘.md
+++ b/1020矩阵连乘.md
@@ -25,7 +25,11 @@
 
 
 ## Solution
-思路: 动态规划. dp(i, j) 表示第 i 个至第 j 个矩阵相乘的最小代价. 矩阵的大小保存在数组 p[n] 中, 第 i 个矩阵的行数为 p[i-1], 列数为 p[i]. 按矩阵数目 j-i 递增的顺序自底向上计算.
+思路: 
+- 动态规划. dp(i, j) 表示第 i 个至第 j 个矩阵相乘的最小代价. 
+- 矩阵的大小保存在数组 p[n] 中, 第 i 个矩阵的行数为 p[i-1], 列数为 p[i]. 
+- 按矩阵数目 j-i 递增的顺序自底向上计算.
+
 ```
 状态转移方程: dp(i, j) = min_k(dp(i, k) + dp(k+1, j) + p[i]*p[k+1]*p[j+1]), i <= k <=j
 
