--- a/1009拦截导弹.md
+++ b/1009拦截导弹.md
@@ -5,7 +5,7 @@
 第一行输入M表示包含M组测试数据，每组第一个输入N (N<100)表示后面有N个整数，表示导弹依次飞来的高度(雷达给出的高度数据是不大于30000的正整数)。
 
 ## Output
-对于每组输入数据，第一行输出这套系统最多能拦截多少导弹。
+对于每组输入数据，第一行输出这套系统最多能拦截多少导弹，以及输出如果要拦截所有导弹最少要配备多少套这种导弹拦截系统。
 
 ## Sample Input
 2
@@ -15,13 +15,15 @@
 7 181 205 471 782 1033 1058 1111
 
 ## Sample Output
-5
+5 2
 
-1
+1 7
 
 
 ## Solution
-思路: 动态规划. 找最长非升子序列. dp(i) 表示以元素 A[i] 结束的最长非升子序列的长度
+思路: 动态规划. 找最长非升/降子序列. 
+- dp1(i) 表示以元素 A[i] 结束的最长非升(下降)子序列的长度; dp2(i) 表示以元素 A[i] 结束的最长非降(上升)子序列的长度. 
+- 系统最多能拦截 max{dp1(i)} 个导弹, 要拦截所有导弹最少要配备 max{dp2(i)} 套系统. 
 
 ```
 状态转移方程: dp(i) = max_j {dp(j) + 1}, j < i && height[j] > height[i]
@@ -32,28 +34,42 @@
 #include<iostream>
 using namespace std;
 
-
-int system(int h[], int n, int dp[])
+int res1, res2;
+void system2(int h[], int n, int dp1[], int dp2[])
 {
-	int res = 1;
+	res1 = 1; 
+	res2 = 1;
+
 	for (int i = 0; i < n; i++)
-		dp[i] = 1;
+	{
+		dp1[i] = 1;
+		dp2[i] = 1;
+	}
+		
 	for (int i = 1; i < n; i++)
 	{
 		for (int j = 0; j < i; j++)
+		{
 			if (h[j] > h[i])
-				dp[i] = max(dp[j] + 1, dp[i]);
-
-		cout << i << ':' << dp[i] << endl;
-		if (dp[i] > res)
-			res = dp[i];
-	}			
-	return res;
+				if (dp1[i] < dp1[j] + 1)
+					dp1[i] = dp1[j] + 1;
+			if (h[j] <= h[i])
+				if (dp2[i] < dp2[j] + 1)
+					dp2[i] = dp2[j] + 1;
+		}
+			
+		// cout << i << ':' << dp[i] << endl;
+		if (dp1[i] > res1)
+			res1 = dp1[i];
+		if (dp2[i] > res2)
+			res2 = dp2[i];
+	}
 }
 
 
 int H[105];
-int DP[105];
+int DP1[105], DP2[105];
+
 int main()
 {
 	int M, N;
@@ -67,9 +83,10 @@ int main()
 			// cout << H[i] << ' ';
 		}
 		// cout << endl;
-		cout << system(H, N, DP) << endl;
+		system2(H, N, DP1, DP2);
+		cout << res1 << ' ' << res2 << endl;
 
 	}
 }
-```
 
+```
