--- a/1009拦截导弹.md
+++ b/1009拦截导弹.md
@@ -26,7 +26,8 @@
 - 系统最多能拦截 max{dp1(i)} 个导弹, 要拦截所有导弹最少要配备 max{dp2(i)} 套系统. 
 
 ```
-状态转移方程: dp(i) = max_j {dp(j) + 1}, j < i && height[j] > height[i]
+状态转移方程: dp1(i) = max_j {dp1(j) + 1}, j < i && height[j] >= height[i]
+             dp2(i) = max_j {dp2(j) + 1}, j < i && height[j] < height[i]
 初始状态: dp[i] = 1
 ```
 
@@ -50,10 +51,10 @@ void system2(int h[], int n, int dp1[], int dp2[])
 	{
 		for (int j = 0; j < i; j++)
 		{
-			if (h[j] > h[i])
+			if (h[j] >= h[i])
 				if (dp1[i] < dp1[j] + 1)
 					dp1[i] = dp1[j] + 1;
-			if (h[j] <= h[i])
+			if (h[j] < h[i])
 				if (dp2[i] < dp2[j] + 1)
 					dp2[i] = dp2[j] + 1;
 		}
