--- a/1016两元素和.md
+++ b/1016两元素和.md
@@ -26,12 +26,9 @@ no
 ## Solution
 思路: 
 
-方法1: 分治.
+方法1: 分治. mid 将数组二分
 
-方法2: 先将数组排序, i 从前往后扫描数组, j 从后往前扫描数组. 
-- A[i]+A[j]<sum 则 i++
-- A[i]+A[j]>sum 则 j++
-- A[i]+A[j]==sum 则 return true
+方法2: 先将数组排序, i 从前往后扫描数组, j 从后往前扫描数组, 比较 A[i]+A[j] 与 sum
 
 
 ```c++
